# substrate-api-client

./: Cargo.toml
src/: events.rs  lib.rs  node_metadata.rs  utils.rs
src/extrinsic/: balances.rs  contract.rs  mod.rs  xt_primitives.rs
src/rpc/: json_req.rs  mod.rs
src/rpc/client/: mod.rs  websys_client.rs
