[package]
name = "substrate-api-client"
version = "2.0.0"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
env_logger      = { version = "0.7", optional = true }
hex             = { version = "0.4", default-features = false }
log             = { version = "0.4", optional = true }
serde           = { version = "1.0", optional = true, features = ["derive"] }
serde_json      = { version = "1.0", optional = true }
thiserror       = { version = "1.0", optional =true }
primitive-types = { version = "0.6.1", optional = true, features = ["codec"] }
wasm-bindgen = "=0.2.55"
futures-signals = {git="https://github.com/alanpoon/rust-signals.git",branch="master"}
futures = "0.3.5"
ed25519-dalek = { version = "1.0.0-pre.3", default-features=false, features = ["nightly"]}


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ws              = { version = "0.7", optional = true, features = ["ssl"] }

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.19"
features = [
    'WebSocket',
    'Response',
    'EventTarget',
    'Event',
    'MessageEvent',
		'ErrorEvent'
]

[dependencies.sp-core]
version = '2.0.0-alpha.7'
package = "sp-core"
default-features = false
features = ["full_crypto"]

[dependencies.codec]
package = "parity-scale-codec"
features = ["derive"]
version = "1.3.0"
default-features = false

[dependencies.runtime_io]
version = '2.0.0-alpha.7'
package = "sp-io"
default-features=false

[dependencies.metadata]
version = '11.0.0-alpha.7'
package = "frame-metadata"
default-features=false

[dependencies.sp-version]
version = '2.0.0-alpha.7'
package = "sp-version"
default-features=false

[dependencies.balances]
version = '2.0.0-alpha.7'
package = "pallet-balances"
default-features=false

[dependencies.system]
version = '2.0.0-alpha.7'
package = "frame-system"
default-features=false

[dependencies.sp-runtime]
version = '2.0.0-alpha.7'
package = "sp-runtime"
default-features=false

[dependencies.support]
version = '2.0.0-alpha.7'
package = "frame-support"
default-features=false

[dependencies.sp-std]
version = '2.0.0-alpha.7'
package = "sp-std"
default-features = false

[dev-dependencies.node_template_runtime]
git = "https://github.com/scs/substrate-api-client-test-node"
tag = 'v2.0.0-alpha.7'
package = "node-template-runtime"

[dev-dependencies]
wabt = "0.9.0"

[dev-dependencies.contracts]
version = '2.0.0-alpha.7'
package = "pallet-contracts"

[dev-dependencies.keyring]
version = '2.0.0-alpha.7'
package = "sp-keyring"

[dev-dependencies.clap]
version = "2.33"
features = ["yaml"]

[features]
default = ["std"]
std = [
	"sp-core/std",
	"codec/std",
	"runtime_io/std",
	"metadata/std",
	"sp-version/std",
	"balances/std",
	"system/std",
	"sp-runtime/std",
	"support/std",
	"sp-std/std",
	"serde/std",
	"serde_json",
	"env_logger",
	"log",
	"ws",
	"hex/std",
	"primitive-types",
	"thiserror",
]
# need to add this for the app_crypto macro
full_crypto = []

[[example]]
name = "example_get_storage"
path = "src/examples/example_get_storage.rs"

[[example]]
name = "example_transfer"
path = "src/examples/example_transfer.rs"

[[example]]
name = "example_event_callback"
path = "src/examples/example_event_callback.rs"

[[example]]
name = "example_generic_extrinsic"
path = "src/examples/example_generic_extrinsic.rs"

[[example]]
name = "example_print_metadata"
path = "src/examples/example_print_metadata.rs"

[[example]]
name = "example_contract"
path = "src/examples/example_contract.rs"

[[example]]
name = "example_custom_storage_struct"
path = "src/examples/example_custom_storage_struct.rs"

[[example]]
name = "example_compose_extrinsic_offline"
path = "src/examples/example_compose_extrinsic_offline.rs"

[[example]]
name = "example_sudo"
path = "src/examples/example_sudo.rs"

